# tiny-expense-tracker

./: .gitignore  Cargo.toml  local.py  main.py  openapi.json  pyproject.toml  requirements.dev.txt  requirements.txt
api/: app.py  auth.py  exchange_rates.py  iso4217.py  storage.py
api/types/: __init__.py  api.py  currency.py  currency_iso4217.py  datetime.py  ids.py  money_pool.py  money_sum.py  transaction.py
frontend/: index.local.html
scripts/: access_mongo.py  backfill_amount_eur.py  generate_index.py  generate_iso4217.py  generate_openapi.py  import_csv.py  retag_legacy.py
src/: api_types.rs  api_utils.rs  http_utils.rs  main.rs  storage.rs
src/types/: currency.rs  mod.rs  money_pool.rs  transaction.rs
test/: conftest.py  test_api.py  test_auth.py  test_currency_parsing.py  test_iso4217.py  utils.py
