[package]
name = "tiny-expense-tracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rusty-money = "0.4.1"
serde = { version = "1.0.204", features = ["derive"] }
